# tema-middleware/src/modules/service-requests/mappers/service-request.mapper.ts
@@ -33,7 +33,9 @@ export class ServiceRequestMapper {
       description: str(row.SREDES_0),
       status: num(row.XSTATUS_0),
       serviceDate: iso(row.XSRDATE_0),
+      reservationDate: iso(row.SRERESDAT_0),
       createdDate: iso(row.CREDAT_0),
+      site: str(row.SALFCY_0),
       customer: str(row.SREBPC_0),
       address: this.address(row),
       routeNumber: str(row.XDRN_0),
